--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div style="margin-top:15px;">
-  <h3>Willkommen bei curaMED</h3>
+  <h3 class="text-center">Willkommen bei curaMED</h3>
 </div>
 
 <div class="card-deck" style="width:auto">
