--- a/templates/administration/create.html
+++ b/templates/administration/create.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div style="margin-top:15px;">
-  <h2>Neuen Standort hinzufügen</h2>
+  <h2 class="text-center">Neuen Standort hinzufügen</h2>
 </div>
 
 <form method='POST'> {% csrf_token %}
 
-  <div class="card border-info mb-3">
+  <div class="card border-info mb-3 w-50 mx-auto">
     <div class="card-body">
       <div class="container">
         <div class="row">
@@ -38,7 +38,7 @@
           <div class="row">
             <div class="col">
               <label>Strasse: </label>
-            </div>
+            </div> 
             <div class="col">{{form.street}}  </div>
           </div>
         </div>
