--- a/templates/administration/location_list.html
+++ b/templates/administration/location_list.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block content %}<br>
-
-<h2>Standortliste</h2>
-<br>
+{% block content %}
+<div style="margin-top:15px;">
+  <h2 class="text-center">Standortliste</h2>
+</div>
 
 {% for object in object_list reversed %}
 <div class="card border-info mb-3 w-100">
@@ -32,9 +32,9 @@
     <div class="card-body">
       <div class="container">
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Adresse: {{ object.street }}, {{ object.number }}</li>
-          <li class="list-group-item">Ort: {{ object.city }}, {{ object.plz }}</li>
-          <li class="list-group-item">Telefonnummer: {{ object.telefon_number }}</li>
+          <li class="list-group-item py-1">Adresse: {{ object.street }}, {{ object.number }}</li>
+          <li class="list-group-item py-1">Ort: {{ object.city }}, {{ object.plz }}</li>
+          <li class="list-group-item py-1">Telefonnummer: {{ object.telefon_number }}</li>
         </ul>
       </div>
     </div>
