--- a/templates/modality/detail.html
+++ b/templates/modality/detail.html
@@ -1,109 +1,100 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<br>
-<h2> Modalität bearbeiten</h2>
-
+<div style="margin-top:15px;">
+    <h2 class="text-center"> Modalität bearbeiten</h2>
+</div>
 <form action='.' method='POST'> {% csrf_token %}
-
-
-
     <div class="card border-info mb-3">
         <div class="card-body">
             <div class="container">
                 <div class="row">
                     <div class="card w-2 border-0">
                         <div class="col">
-
                             <img src="/static/images/mri.png" class="card-img-top" width="55" height="45">
                         </div>
                     </div>
-
                 </div>
 
             </div>
             <div class="card-body ">
                 <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <label>AETitle: </label>
+                    <div style="margin-bottom:15px;">
+                        <div class="row">
+                            <div class="col">
+                                <label>AETitle: </label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="ae_title" id="id_ae_title"
+                                    title="Der AE-Titel kann nicht bearbeitet werden. Bitte hierfür die Modalität neu erstellen."
+                                    value='{{ object.ae_title }}' readonly>
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="text" name="ae_title" id="id_ae_title"
-                            title= "Der AE-Titel kann nicht bearbeitet werden. Bitte hierfür die Modalität neu erstellen."
-                             value='{{ object.ae_title }}' readonly>
-                        </div>
-
                     </div>
-                    <br>
-                    <div class="row">
-                        <div class="col">
-                            <label>Title: </label>
+                    <div style="margin-bottom:15px;">
+                        <div class="row">
+                            <div class="col">
+                                <label>Title: </label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="title" id="id_name" value='{{ object.title }}'>
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="text" name="title" id="id_name" value='{{ object.title }}'>
-                        </div>
-
                     </div>
-                    <br>
-                    <div class="row">
-                        <div class="col">
-                            <label>Beschreibung: </label>
+                    <div style="margin-bottom:15px;">
+                        <div class="row">
+                            <div class="col">
+                                <label>Beschreibung: </label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="description" id="id_name" value='{{ object.description }}'>
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="text" name="description" id="id_name" value='{{ object.description }}'>
-                        </div>
-
                     </div>
-                    <br>
-                    <div class="row">
-                        <div class="col">
-                            <label>IP: </label>
+                    <div style="margin-bottom:15px;">
+                        <div class="row">
+                            <div class="col">
+                                <label>IP: </label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="ip" id="id_name" value='{{ object.ip }}'>
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="text" name="ip" id="id_name" value='{{ object.ip }}'>
-                        </div>
-
                     </div>
-                    <br>
-                    <div class="row">
-                        <div class="col">
-                            <label>Port: </label>
+                    <div style="margin-bottom:15px;">
+                        <div class="row">
+                            <div class="col">
+                                <label>Port: </label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="port" id="id_name" value='{{ object.port }}'>
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="text" name="port" id="id_name" value='{{ object.port }}'>
-                        </div>
-
                     </div>
-                    <br>
+                    <div style="margin-bottom:15px;">
+                        <div class="row">
+                            <div class="col">
+                                <label>Standort: </label>
+                            </div>
 
-                    <div class="row">
-                        <div class="col">
-                            <label>Standort: </label>
+                            <div class="col" id="associate_location">
+                                <select name='associate_location' id='id_associate_location'>
+                                    {% for dropdown in AdministrationInformation %}
+                                    <option value='{{ dropdown.id }}'>
+                                        {{ dropdown.get_location_representation }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
                         </div>
-
-                        <div class="col" id="associate_location">
-                            <select name = 'associate_location' id = 'id_associate_location'  >
-                                              
-                             {% for dropdown in AdministrationInformation %}
-                             <option value='{{ dropdown.id }}'> 
-                                 {{ dropdown.get_location_representation }}</option>
-                             {% endfor %}
-                        </select>
-                        </div>
-
                     </div>
-
-
                 </div>
             </div>
-
-<input type='submit' class="btn btn-outline-primary" value='Speichern' />
-    <a href="{% url 'modalities' %}" class="btn btn-outline-primary">Abbrechen</a>
+            <input type='submit' class="btn btn-outline-primary" value='Speichern' />
+            <a href="{% url 'modalities' %}" class="btn btn-outline-primary">Abbrechen</a>
         </div>
     </div>
 
-    
+
 </form>
 
 {% endblock %}
