--- a/templates/modality/modality_list.html
+++ b/templates/modality/modality_list.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<br>
-<h2>Konfigurierte Modalitäten</h2>
-<br>
+<div style="margin-top:15px;">
+<h2 class="text-center">Konfigurierte Modalitäten</h2>
+</div>
 {% for instance in object_list reversed %}
 <div class="card border-info mb-3 w-100">
   <div class="card-body">
@@ -13,25 +13,19 @@
             <img src="/static/images/mri.png" class="card-img-top" width="55" height="45">
           </div>
         </div>
-
         <div class="col-15">
           <h5 class="card-title" title="Der DICOM AE-Titel ist eine kurze, eindeutige Bezeichnung für ein Gerät">
             AE-Titel: {{instance.ae_title}} </h5>
         </div>
       </div>
     </div>
-
-
-
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Typ: {{ instance.get_title_display }}</li>
       <li class="list-group-item">Beschreibung: {{ instance.description }}</li>
       <li class="list-group-item">IP Adresse: {{ instance.ip }}</li>
       <li class="list-group-item">Port Nummer: {{ instance.port }}</li>
-
       <li class="list-group-item"> Standort: {{ instance.associate_location.get_location_representation }} </li>
-
-    </ul>
+  </ul>
     <a href="{% url 'modalityDetail' instance.id %}" class="btn btn-outline-primary">Modalität bearbeiten</a>
     <a href="{% url 'modalityDelete' instance.id %}" class="btn btn-outline-primary">Modalität entfernen</a>
     <button type="button" id="btn-connect" class="btn btn-outline-primary"> Verbinden</button>
@@ -47,18 +41,14 @@
     $('#btn-connect').html('<span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> Verbinden...').addClass('disabled');
     var $ti = $('#btn-connect').html('<span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> Verbinden...');
    
-    setTimeout(function () {
-       
+    setTimeout(function () {       
     }, 1000);
    
    var jqxhr = jQuery.get("{%url 'modalityEcho'%}?ip-address=" + ip + "&port-address=" + port + "&ae-title=" + ae_title + "&location-id=" + location, function () {
-            $ti.html('Modalität Online');
-           
+            $ti.html('Modalität Online');           
         })
             .fail(function () {
-                $ti.html('Modalität Offline');
-               
-
+                $ti.html('Modalität Offline'); 
             });
   });
    
