--- a/templates/patient/patient_detail.html
+++ b/templates/patient/patient_detail.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<br>
-<h2>Patient bearbeiten</h2>
-
+<div style="margin-top:15px;"> 
+<h2 class="text-center">Patient bearbeiten</h2>
+</div>
 <form action='.' method='POST'>
     {% csrf_token %}
     <div class="card border-info mb-3 w-75">
         <div class="card-header"> Patient ID: {{ object.id }} </div>
         <div class="card-body">
             <ul class="list-group list-group-flush"> 
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"> <label>Geschlecht: </label> </div>
                         <div class="col"> <select name='title' id='id_title'>
@@ -21,24 +21,21 @@
                             </select></div>
                     </div>
                 </li>
-
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"> <label>Vorname: </label> </div>
                         <div class="col"> 
                             <input type="text" name="first_name" id="id_first_name" value='{{ object.first_name }}'> </div>
                     </div>
                 </li>
-
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"><label>Nachname </label></div>
                         <div class="col">
                             <input type="text" name="second_name" id="id_second_name" value='{{ object.second_name }}'></div>
                     </div>
                 </li>
-
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"><label>Geburtstag: </label></div>
                         <div class="col">
@@ -46,24 +43,21 @@
                             <input type="text" name="birthdate" id="id_birthdate" value="{{object.birthdate}}"></div>
                     </div>
                 </li>
-
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"><label>Strasse: </label></div>
                         <div class="col">
                             <input type="text" name="address" id="id_address" value='{{ object.address }}'></div>
                     </div>
                 </li>
-
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"><label>Nr.: </label></div>
                         <div class="col">
                             <input type="text" name="number" id="id_number" value='{{ object.number }}'> </div>
                     </div>
                 </li>
-
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"><label>Stadt: </label></div>
                         <div class="col">
@@ -71,7 +65,7 @@
                     </div>
                 </li>
 
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"><label>PLZ: </label></div>
                         <div class="col">
@@ -79,7 +73,7 @@
                     </div>
                 </li>
 
-                <li class="list-group-item">
+                <li class="list-group-item py-1">
                     <div class="row">
                         <div class="col"><label>Sprache: </label></div>
                         <div class="col">
@@ -89,11 +83,7 @@
             </ul>
     <input type='submit' value='Ändern' class="btn btn-outline-primary" />
     <a href="{% url 'patients' %}" class="btn btn-outline-primary">Abbrechen</a>
-
         </div>
     </div>
- 
-
 </form>
-
 {% endblock %}
